# monatq

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
monatq/: Cargo.toml
monatq-py/: README.md  pyproject.toml
monatq-py/examples/: mnist_activations.py  quantize.py
monatq-py/rust/: Cargo.toml
monatq-py/rust/src/: lib.rs
monatq-py/src/monatq/: __init__.py
monatq-py/src/monatq/libmonatq.dylib.dSYM/Contents/: Info.plist
monatq-py/src/monatq_py/: __init__.py
monatq-py/tests/: test_numpy.py  test_quantize.py  test_torch.py
monatq/benches/: serialization.rs  tensor_digest.rs
monatq/examples/: visualize.rs
monatq/src/: distribution.rs  lib.rs  tensor_digest.rs  tensor_value.rs
monatq/src/server/: frontend.html  mod.rs
monatq/tests/: analyze.rs  serialization.rs  tensor_digest.rs
src/: lib.rs  tdigest.rs
tests/: tdigest.rs
